[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "examples"
description = "Examples of using AuthX"
readme = "README.md"
authors = [{ name = "Yasser Tahiri", email = "hello@yezz.me" }]
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["authx", "uvicorn>=0.34.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yezz123/authx"
Documentation = "https://authx.yezz.me/"
Funding = 'https://github.com/sponsors/yezz123'
Source = 'https://github.com/yezz123/authx'
Changelog = 'https://authx.yezz.me/release/'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "examples/__init__.py"

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.6.1",
    "pytest-xdist>=3.2.1",
    "httpx>=0.28.1",
]

[tool.uv.sources]
authx = { path = "../" }
